<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="16dp"
    tools:context=".ui.fragments.login.LoginFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="24dp"
        app:cardElevation="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/text_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/email"
                android:drawablePadding="16dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_sign_in" />


            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/lock"
                android:drawableEnd="@drawable/ic_hide_eye"
                android:drawablePadding="16dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_text_email" />


            <TextView
                android:id="@+id/text_view_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_text_password" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_forgot_password" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_login">

                <TextView
                    android:id="@+id/text_view_no_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:text="@string/dont_have_an_account"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/text_view_continue_with_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/sign_up_lower_case"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
