<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.fragments.profile.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_user"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/user"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_user"
                app:layout_constraintTop_toTopOf="@id/image_user"
                tools:text="Ali Gürkan Töre" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linear_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view_profile">

        <TextView
            android:id="@+id/text_view_choice_langugae"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_language"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linear_select_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/item_categories_background"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_flag"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:src="@drawable/united_kingdom" />

            <TextView
                android:id="@+id/text_languages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_profile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_language" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_background"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/button_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
